# gravity

./: .gitignore  Cargo.toml  MOVIE_PLAN.md  PLAN.md  README.md
.github/workflows/: ci.yml
scenarios/: figure_eight.toml  galaxy_collision.toml  solar_system.toml
src/: camera.rs  config.rs  lib.rs  main.rs  physics.rs  system.rs
tests/: stability.rs
